# Developer-Platform

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md
bootstrap/: bootstrap.ps1  setup.ps1
bootstrap/config/: bootstrap.json
bootstrap/modules/: core.ps1  git.ps1  loader.ps1  python.ps1  setup_engine.ps1  validation.ps1
powershell/: setup-commands.txt
templates/python-desktop-pyside6/: PythonDesktopTemplate.spec  README.md  mypy.ini  pyproject.toml  ruff.toml
templates/python-desktop-pyside6/config/: app.json
templates/python-desktop-pyside6/src/: app.py  app_config.py  application.py  config.py  main.py
templates/python-desktop-pyside6/src/app/: app_config.py  application.py  logger.py  main.py
templates/python-desktop-pyside6/src/app/views/: main_window.py
templates/python-desktop-pyside6/src/views/: main_window.py
vscode/: install-extensions.ps1  settings.json
